# tidify

./: README.md  pyproject.toml
examples/: Complex_Example.ipynb  complex_example.json  complex_example.py
src/tidify/: __init__.py  tidify.py
