[tool.poetry]
name = "tidify"
version = "0.1.0"
description = "Convert nested objects into tidy data"
authors = ["Austin Howard <austin@tangibleintelligence.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyterlab = "^3.4.3"
nb-black = "^1.0.7"
black = "^22.3.0"
tabulate = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
